@@ -7,6 +7,7 @@ Changes in 1.2:
 
 Changes in 1.1.2:
 - Fix bug causing time left calculation to return something when a torrent is paused (272182)
+- Improve performance of UTP delay window algorithm
 
 Changes in 1.1.1:
 - Fix deadlock in utp::OutputQueue when packet sending fails
